[gd_scene load_steps=2 format=3 uid="uid://b5g5vsf4apfvd"]

[ext_resource type="Script" path="res://User_Battle/UI/trivia_popup.gd" id="1_6iaxc"]

[node name="Trivia Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6iaxc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -29.5
offset_right = 20.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="QuestionLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
autowrap_mode = 2

[node name="AnswerA" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AnswerB" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AnswerC" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
